--- a/docs/vocs/docs/pages/cli/SUMMARY.mdx
+++ b/docs/vocs/docs/pages/cli/SUMMARY.mdx
@@ -51,3 +51,54 @@
     - [`reth config`](./reth/config.mdx)
     - [`reth prune`](./reth/prune.mdx)
     - [`reth re-execute`](./reth/re-execute.mdx)
+  - [`op-reth`](./op-reth.mdx)
+    - [`op-reth node`](./op-reth/node.mdx)
+    - [`op-reth init`](./op-reth/init.mdx)
+    - [`op-reth init-state`](./op-reth/init-state.mdx)
+    - [`op-reth import-op`](./op-reth/import-op.mdx)
+    - [`op-reth import-receipts-op`](./op-reth/import-receipts-op.mdx)
+    - [`op-reth dump-genesis`](./op-reth/dump-genesis.mdx)
+    - [`op-reth db`](./op-reth/db.mdx)
+      - [`op-reth db stats`](./op-reth/db/stats.mdx)
+      - [`op-reth db list`](./op-reth/db/list.mdx)
+      - [`op-reth db checksum`](./op-reth/db/checksum.mdx)
+      - [`op-reth db diff`](./op-reth/db/diff.mdx)
+      - [`op-reth db get`](./op-reth/db/get.mdx)
+        - [`op-reth db get mdbx`](./op-reth/db/get/mdbx.mdx)
+        - [`op-reth db get static-file`](./op-reth/db/get/static-file.mdx)
+      - [`op-reth db drop`](./op-reth/db/drop.mdx)
+      - [`op-reth db clear`](./op-reth/db/clear.mdx)
+        - [`op-reth db clear mdbx`](./op-reth/db/clear/mdbx.mdx)
+        - [`op-reth db clear static-file`](./op-reth/db/clear/static-file.mdx)
+      - [`op-reth db repair-trie`](./op-reth/db/repair-trie.mdx)
+      - [`op-reth db static-file-header`](./op-reth/db/static-file-header.mdx)
+        - [`op-reth db static-file-header block`](./op-reth/db/static-file-header/block.mdx)
+        - [`op-reth db static-file-header path`](./op-reth/db/static-file-header/path.mdx)
+      - [`op-reth db version`](./op-reth/db/version.mdx)
+      - [`op-reth db path`](./op-reth/db/path.mdx)
+      - [`op-reth db settings`](./op-reth/db/settings.mdx)
+        - [`op-reth db settings get`](./op-reth/db/settings/get.mdx)
+        - [`op-reth db settings set`](./op-reth/db/settings/set.mdx)
+          - [`op-reth db settings set receipts_in_static_files`](./op-reth/db/settings/set/receipts_in_static_files.mdx)
+          - [`op-reth db settings set transaction_senders_in_static_files`](./op-reth/db/settings/set/transaction_senders_in_static_files.mdx)
+      - [`op-reth db account-storage`](./op-reth/db/account-storage.mdx)
+    - [`op-reth stage`](./op-reth/stage.mdx)
+      - [`op-reth stage run`](./op-reth/stage/run.mdx)
+      - [`op-reth stage drop`](./op-reth/stage/drop.mdx)
+      - [`op-reth stage dump`](./op-reth/stage/dump.mdx)
+        - [`op-reth stage dump execution`](./op-reth/stage/dump/execution.mdx)
+        - [`op-reth stage dump storage-hashing`](./op-reth/stage/dump/storage-hashing.mdx)
+        - [`op-reth stage dump account-hashing`](./op-reth/stage/dump/account-hashing.mdx)
+        - [`op-reth stage dump merkle`](./op-reth/stage/dump/merkle.mdx)
+      - [`op-reth stage unwind`](./op-reth/stage/unwind.mdx)
+        - [`op-reth stage unwind to-block`](./op-reth/stage/unwind/to-block.mdx)
+        - [`op-reth stage unwind num-blocks`](./op-reth/stage/unwind/num-blocks.mdx)
+    - [`op-reth p2p`](./op-reth/p2p.mdx)
+      - [`op-reth p2p header`](./op-reth/p2p/header.mdx)
+      - [`op-reth p2p body`](./op-reth/p2p/body.mdx)
+      - [`op-reth p2p rlpx`](./op-reth/p2p/rlpx.mdx)
+        - [`op-reth p2p rlpx ping`](./op-reth/p2p/rlpx/ping.mdx)
+      - [`op-reth p2p bootnode`](./op-reth/p2p/bootnode.mdx)
+    - [`op-reth config`](./op-reth/config.mdx)
+    - [`op-reth prune`](./op-reth/prune.mdx)
+    - [`op-reth re-execute`](./op-reth/re-execute.mdx)
