--- a/docs/vocs/docs/pages/run/faq/profiling.mdx
+++ b/docs/vocs/docs/pages/run/faq/profiling.mdx
@@ -139,17 +139,17 @@ cgexec -g memory:rethMemory reth node
 
 ### Understanding allocation with jeprof
 
-When reth is built with the `jemalloc-prof` feature and debug symbols, the profiling still needs to be configured and enabled at runtime. This is done with the `MALLOC_CONF` environment variable. Take the following
+When reth is built with the `jemalloc-prof` feature and debug symbols, the profiling still needs to be configured and enabled at runtime. This is done with the `_RJEM_MALLOC_CONF` environment variable. Take the following
 command to launch reth with jemalloc profiling enabled:
 
 ```
-MALLOC_CONF=prof:true,lg_prof_interval:32,lg_prof_sample:19 reth node
+_RJEM_MALLOC_CONF=prof:true,lg_prof_interval:32,lg_prof_sample:19 reth node
 ```
 
 If reth is not built properly, you will see this when you try to run reth:
 
 ```
-~/p/reth (dan/managing-memory)> MALLOC_CONF=prof:true,lg_prof_interval:32,lg_prof_sample:19 reth node
+~/p/reth (dan/managing-memory)> _RJEM_MALLOC_CONF=prof:true,lg_prof_interval:32,lg_prof_sample:19 reth node
 <jemalloc>: Invalid conf pair: prof:true
 <jemalloc>: Invalid conf pair: lg_prof_interval:32
 <jemalloc>: Invalid conf pair: lg_prof_sample:19
