--- a/docs/vocs/docs/pages/cli/reth/download.mdx
+++ b/docs/vocs/docs/pages/cli/reth/download.mdx
@@ -113,6 +113,11 @@ Static Files:
           If no URL is provided, the latest mainnet archive snapshot
           will be proposed for download from https://downloads.merkle.io
 
+      --metrics <SOCKET>
+          Enable Prometheus metrics.
+
+          The metrics will be served at the given interface and port.
+
 Logging:
       --log.stdout.format <FORMAT>
           The format to use for logs written to stdout
