--- a/docs/vocs/docs/pages/cli/reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/reth/node.mdx
@@ -21,20 +21,6 @@ Options:
 
           [default: mainnet]
 
-      --instance <INSTANCE>
-          Add a new instance of a node.
-
-          Configures the ports of the node to avoid conflicts with the defaults. This is useful for running multiple nodes on the same machine.
-
-          Max number of instances is 200. It is chosen in a way so that it's not possible to have port numbers that conflict with each other.
-
-          Changes to the following port numbers: - `DISCOVERY_PORT`: default + `instance` - 1 - `AUTH_PORT`: default + `instance` * 100 - 100 - `HTTP_RPC_PORT`: default - `instance` + 1 - `WS_RPC_PORT`: default + `instance` * 2 - 2 - `IPC_PATH`: default + `-instance`
-
-      --with-unused-ports
-          Sets all ports to unused, allowing the OS to choose random unused ports when sockets are bound.
-
-          Mutually exclusive with `--instance`.
-
   -h, --help
           Print help (see a summary with '-h')
 
@@ -55,6 +41,34 @@ Metrics:
           Default: 5 seconds
 
           [default: 5]
+
+      --metrics.prometheus.push.username <USERNAME>
+          Username for HTTP Basic Authentication to the push gateway.
+
+          Must be used together with `--metrics.prometheus.push.password`. Only applies when a push gateway URL is configured.
+
+          [env: RETH_METRICS_PUSH_USERNAME=]
+
+      --metrics.prometheus.push.password <PASSWORD>
+          Password for HTTP Basic Authentication to the push gateway.
+
+          Must be used together with `--metrics.prometheus.push.username`. Only applies when a push gateway URL is configured.
+
+          [env: RETH_METRICS_PUSH_PASSWORD=]
+
+      --instance <INSTANCE>
+          Add a new instance of a node.
+
+          Configures the ports of the node to avoid conflicts with the defaults. This is useful for running multiple nodes on the same machine.
+
+          Max number of instances is 200. It is chosen in a way so that it's not possible to have port numbers that conflict with each other.
+
+          Changes to the following port numbers: - `DISCOVERY_PORT`: default + `instance` - 1 - `AUTH_PORT`: default + `instance` * 100 - 100 - `HTTP_RPC_PORT`: default - `instance` + 1 - `WS_RPC_PORT`: default + `instance` * 2 - 2 - `IPC_PATH`: default + `-instance`
+
+      --with-unused-ports
+          Sets all ports to unused, allowing the OS to choose random unused ports when sockets are bound.
+
+          Mutually exclusive with `--instance`.
 
 Datadir:
       --datadir <DATA_DIR>
