docs: set tracing-otlp.filter default text to DEBUG

--- a/docs/vocs/docs/pages/cli/reth/config.mdx
+++ b/docs/vocs/docs/pages/cli/reth/config.mdx
@@ -129,7 +129,7 @@ Tracing:
 
           Example: --tracing-otlp.filter=info,reth=debug,hyper_util=off
 
-          Defaults to TRACE if not specified.
+          Defaults to DEBUG if not specified.
 
           [default: debug]
 
