--- a/docs/vocs/docs/pages/cli/reth/stage/run.mdx
+++ b/docs/vocs/docs/pages/cli/reth/stage/run.mdx
@@ -280,7 +280,7 @@ Networking:
       --max-peers <COUNT>
           Maximum number of total peers (inbound + outbound).
 
-          Sets both max-inbound-peers and max-outbound-peers using 2:1 ratio. Cannot be used with --max-outbound-peers or --max-inbound-peers.
+          Splits peers using approximately 2:1 inbound:outbound ratio. Cannot be used together with `--max-outbound-peers` or `--max-inbound-peers`.
 
       --max-tx-reqs <COUNT>
           Max concurrent `GetPooledTransactions` requests.
