docs: add architecture diagram for EVM node component

--- a/docs/vocs/docs/pages/sdk/node-components/evm.mdx
+++ b/docs/vocs/docs/pages/sdk/node-components/evm.mdx
@@ -13,7 +13,18 @@ The EVM component manages:
 - State management and caching
 
 ## Architecture
+```mermaid
+graph TD
+    Config[EVM Configuration] --> Env[EVM Environment]
+    Config --> Executor[Block Executor]
+    Config --> Builder[Block Builder]
 
+    Executor --> State[(State Database)]
+    Builder --> State
+
+    Builder --> Assembler[Block Assembler]
+    Assembler --> State
+```
 
 ## Key Concepts
 
