--- a/docs/vocs/docs/pages/exex/how-it-works.mdx
+++ b/docs/vocs/docs/pages/exex/how-it-works.mdx
@@ -4,6 +4,28 @@ description: How Execution Extensions (ExExes) work in Reth.
 
 # How do ExExes work?
 
+## Architecture
+
+```mermaid
+sequenceDiagram
+    participant Reth
+    participant ExEx
+
+    Note over Reth,ExEx: Normal Flow
+    Reth->>ExEx: ChainCommit Notification
+    activate ExEx
+    ExEx->>ExEx: Process Block Data
+    ExEx->>Reth: FinishedHeight Event
+    deactivate ExEx
+
+    Note over Reth,ExEx: Reorg Flow
+    Reth->>ExEx: ChainReorg Notification
+    activate ExEx
+    ExEx->>ExEx: Rollback & Re-process
+    ExEx->>Reth: New FinishedHeight Event
+    deactivate ExEx
+```
+
 ExExes are just [Futures](https://doc.rust-lang.org/std/future/trait.Future.html) that run indefinitely alongside Reth
 – as simple as that.
 
