--- a/docs/vocs/docs/pages/cli/reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/reth/node.mdx
@@ -299,6 +299,17 @@ RPC:
       --http.disable-compression
           Disable compression for HTTP responses
 
+      --http.compression <HTTP_COMPRESSION>
+          Configure HTTP response compression algorithms.
+          
+          To disable compression entirely, use --http.disable-compression.
+          
+          Algorithm preference order is enforced: zstd > gzip > deflate > br
+
+          [default: zstd,gzip,deflate]
+          
+          [possible values: zstd, gzip, deflate, br]
+
       --http.api <HTTP_API>
           Rpc Modules to be configured for the HTTP server
 
